--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,11 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# backups de gedit
+*~
+
+#monodevelop
+bin/
+*.userprefs
+*.pidb
